--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -18,3 +18,5 @@ $theme-colors: (
 );
 
 $duration-fast: 0.3s;
+
+$zindex-header: 99;
